infra/backend/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sneak-peek-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sneak-peek-back
  template:
    metadata:
      labels:
        app: sneak-peek-back
    spec:
      containers:
        - name: sneak-peek
          image: christiantran/sneak-peek-back:pitchday
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
