infra/backend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sneak-peek-back
spec:
  rules:
    - host: sneak-peek-back.ops.consensys.net
      http:
        paths:
          - backend:
              serviceName: sneak-peek-back
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - sneak-peek-back.ops.consensys.net

  position field daring sting call force outside address broom pig blast salt
